# ocr-prog-proj

./: .gitignore  .taurignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  style.css  utils.css
database_lib/: Cargo.toml
database_lib/src/database/: bson.rs  mod.rs
math_lib/: Cargo.toml
math_lib/src/: lib.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: dashboard.rs  home.rs  login.rs  mod.rs
src/components/: header.rs  info_bar.rs  inputs.rs  mod.rs
