[package]
name = "ocr-prog-proj-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
database_lib = { path = "database_lib" }
math_lib = { path = "math_lib" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["tauri"] }
futures = "0.3.28"
wasm-logger = "0.2.0"
log = "0.4.20"

[workspace]
members = ["src-tauri", "database_lib", "math_lib"]
